--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
                         <div class="col-md-4 col-sm-6 co-xs-12 gal-item">
                             <div class="box">
                                 <a href="#" data-toggle="modal" data-target="#4">
-                                    <img src="images/galeri-4.jpg" alt="" />
+                                    <img src="images/galeri-4.JPG" alt="" />
                                 </a>
                                 <div class="modal fade" id="4" tabindex="-1" role="dialog">
                                     <div class="modal-dialog" role="document">
@@ -612,14 +612,14 @@
                         <div class="col-md-4 col-sm-6 co-xs-12 gal-item">
                             <div class="box">
                                 <a href="#" data-toggle="modal" data-target="#5">
-                                    <img src="images/galeri-9.jpg" alt="" />
+                                    <img src="images/galeri-9.jpeg" alt="" />
                                 </a>
                                 <div class="modal fade" id="5" tabindex="-1" role="dialog">
                                     <div class="modal-dialog" role="document">
                                         <div class="modal-content">
                                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
                                             <div class="modal-body">
-                                                <img src="images/galeri-9.jpg" alt="" />
+                                                <img src="images/galeri-9.jpeg" alt="" />
                                             </div>
                                             <div class="col-md-12 description">
                                                 <h4>This is the 5 one on my Gallery</h4>
@@ -652,14 +652,14 @@
                         <div class="col-md-8 col-sm-12 co-xs-12 gal-item">
                             <div class="box">
                                 <a href="#" data-toggle="modal" data-target="#10">
-                                    <img src="images/galeri-7.png" alt="" />
+                                    <img src="images/galeri-7.jpeg" alt="" />
                                 </a>
                                 <div class="modal fade" id="10" tabindex="-1" role="dialog">
                                     <div class="modal-dialog" role="document">
                                         <div class="modal-content">
                                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
                                             <div class="modal-body">
-                                                <img src="images/galeri-7.png" alt="" />
+                                                <img src="images/galeri-7.jpeg" alt="" />
                                             </div>
                                             <div class="col-md-12 description">
                                                 <h4>This is the 7 one on my Gallery</h4>
