--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
                     <!-- end blog-box -->
 
                     <div class="blog-btn-v">
-                        <a class="hvr-underline-from-center" href="#">View the Blog</a>
+                        <a class="hvr-underline-from-center" href="blog.html">View the Blog</a>
                     </div>
 
                 </div>
